<resources>
    <string name="app_name">Dulces Sabores</string>

    <string name="lblEmail">Correo:</string>
    <string name="lblPassword">Contraseña:</string>
    <string name="lblConfirmPassword">Confirmar contraseña:</string>

    <string name="btnSignin">Entrar</string>
    <string name="btnSignup">Registrarse</string>
    <string name="btnConfirm">Confirmar</string>
    <string name="btnHasAccount">Ya tienes una cuenta, inicia sesión</string>
    <string name="btnClose">Cerrar</string>

    <string name="lblPasteles">Pasteles</string>
    <string name="lblCupcakes">Cup cakes</string>
    <string name="lblGalletas">Galletas</string>

    <string name="lblTituloPasteles">Nuestras delicias en pastel</string>
    <string name="lblCumpleaños">Cumpleaños</string>

    <string name="lblPastelesCumpleaños">Pasteles de cumpleaños</string>
    <string name="lblPastelRosa">Pastel Rosa</string>
    <string name="lblPawPatrol">Pastel Paw Patrol</string>
    <string name="lblSnoopy">Pastel Snoopy</string>
    <string name="lblPastelChocolate">Pastel Chocolate</string>

    <string name="lblBoda">Boda</string>
    <string name="lblXVaños">XV Años</string>
    <string name="lblEspeciales">Ocasiones especiales</string>

    <string name="lblRealizarPedido">Realizar pedido</string>
    <string name="lblNombre">Nombre:</string>
    <string name="lblDireccion">Dirección:</string>
    <string name="lblTelefono">Teléfono:</string>
    <string name="lblFechaEntrega">Fecha entrega:</string>
    <string name="lblHoraEntrega">Hora de entrega:</string>
    <string name="lblSaborPan">Sabor pan:</string>
    <string name="lblTamaño">Tamaño:</string>
    <string name="lblSaborRelleno">Sabor de relleno:</string>
    <string name="lblExtra">Extra:</string>
    <string name="btnRealizarPedido">¡Listo!</string>
    <string name="todo">todo</string>


    <string-array name="sabor_pan_array">
        <item>Chocolate</item>
        <item>Vainilla</item>
    </string-array>

    <string-array name="sabor_relleno_array">
        <item>Fresas naturales</item>
        <item>Chocolate</item>
        <item>Chantillí</item>
        <item>Nutella</item>
    </string-array>

    <string-array name="tamaño_array">
        <item>Mediano(30cm de diametro)</item>
        <item>Grande(50cm de diametro)</item>
    </string-array>

    <string name="lblDescripcionPastelRosa">Pastel cubierto de merengue y decoraciones en fondant.\n\n
    Sabores de pan:\n
    - Chocolate.\n - Vanilla.\n\n
    Relleno:\
    - Fresas naturales. \n - Chantillí. \n - Chocolate. \n - Nutela. </string>
    <string name="tamano">Tamaño:\n
    - Mediano (30cm de diametro).\n\n
    - Grande (50cm de diametro). </string>
</resources>
