<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lyt_base"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PedidoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <android.support.v7.widget.CardView
            android:id="@+id/cvTitulo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/dulsces_sab" />

                <TextView
                    android:id="@+id/lblTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/lblRealizarPedido"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/lblNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblNombre" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/lblDireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblDireccion" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/lblTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblTelefono" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone" />

            <TextView
                android:id="@+id/lblFechaEntrega"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblFechaEntrega" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date" />

            <TextView
                android:id="@+id/lblHoraEntrega"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblHoraEntrega" />

            <EditText
                android:id="@+id/editText6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="time" />

            <TextView
                android:id="@+id/lblSaborPan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblSaborPan" />

            <Spinner
                android:id="@+id/spinnerSaborPan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/lblTamaño"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblTamaño" />

            <Spinner
                android:id="@+id/spinnerTamaño"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/lblSaborRelleno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblSaborRelleno" />

            <Spinner
                android:id="@+id/spinnerSaborRelleno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/lblExtra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblExtra" />

            <EditText
                android:id="@+id/editText10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/btnRealizarPedido"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnRealizarPedido" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>