<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lyt_base"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PastelRosaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/cvTitulo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/dulsces_sab" />

                <TextView
                    android:id="@+id/lbl_titulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/lblPastelRosa"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.GridLayout
            android:id="@+id/GridLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            app:columnCount="1"
            app:rowCount="2">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:onClick="realizarPedido">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/ivPastelRosa"
                        android:layout_width="120dp"
                        android:layout_height="90dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:contentDescription="@string/todo"
                        app:srcCompat="@drawable/cumpleanos3" />

                    <TextView
                        android:id="@+id/lblDescripcionPastelRosa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_margin="10dp"
                        android:layout_toEndOf="@+id/ivPastelRosa"
                        android:layout_toRightOf="@+id/ivPastelRosa"
                        android:autoText="false"
                        android:paddingBottom="5dp"
                        android:text="@string/lblDescripcionPastelRosa"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                    <TextView
                        android:id="@+id/lblDescripcionTamano"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/ivPastelRosa"
                        android:layout_margin="10dp"
                        android:layout_toLeftOf="@+id/lblDescripcionPastelRosa"
                        android:text="@string/tamano"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/lblRealizarPedido"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="realizarPedido"
                android:text="@string/lblRealizarPedido"
                android:textAppearance="@style/TextAppearance.AppCompat"
                app:layout_gravity="center" />

        </android.support.v7.widget.GridLayout>

    </LinearLayout>
</ScrollView>