<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lytScroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TipoPastelActivity">

    <LinearLayout
        android:id="@+id/lytPrincipal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/lytTitulo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblTituloPasteles"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/lblTituloPastel"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="86dp"
                android:layout_height="69dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/dulces_sabores" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="130dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/pastel22" />

            <TextView
                android:id="@+id/lblCumpleaños"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblCumpleaños"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="130dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/pastel_boda" />

            <TextView
                android:id="@+id/lblBoda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblBoda"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="130dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/pastel_xv" />

            <TextView
                android:id="@+id/lblXVAños"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblXVaños"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="130dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/pastel_unicornio" />

            <TextView
                android:id="@+id/lblEspeciales"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblEspeciales"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>